--- a/platformio.ini
+++ b/platformio.ini
@@ -13,7 +13,6 @@ platform = espressif32
 board = wemos_d1_mini32
 framework = arduino
 upload_speed = 115200
-upload_port = COM[4]
 monitor_speed = 115200
 lib_deps = 
 	Wire
@@ -25,3 +24,4 @@ lib_deps =
 	Time
 	bblanchon/ArduinoJson@^6.17.2
 	bitbank2/AnimatedGIF@^1.1.2
+	jandrassy/TelnetStream@^1.2.1
