Split into all classes now

--- a/platformio.ini
+++ b/platformio.ini
@@ -25,3 +25,5 @@ lib_deps =
 	bblanchon/ArduinoJson@^6.17.2
 	bitbank2/AnimatedGIF@^1.1.2
 	jandrassy/TelnetStream@^1.2.1
+upload_port = 192.168.20.6
+upload_protocol = espota
